Name:                wishsys
Version:             0.2
Synopsis:            Wish list web app
Description:         Wish list web app where administrators can insert wishes,
                     and guest users can register purchases.
License:             MIT
Author:              Ulf Lilleengen
Maintainer:          lulf@pvv.ntnu.no
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable wishsys
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap        == 0.8.*,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    containers  == 0.4.*,
    data-lens-template == 2.1.*,
    HDBC-sqlite3 == 2.1.*,
    snaplet-hdbc == 0.8.*,
    heist == 0.8.*,
    xmlhtml == 0.1.*,
    blaze-html == 0.4.*,
    text == 0.11.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
