Name:                wishsys
Version:             0.4
Synopsis:            Wish list web app
Description:         Wish list web app where administrators can insert wishes,
                     and guest users can register purchases.
License:             MIT
Author:              Ulf Lilleengen
Maintainer:          lulf@pvv.ntnu.no
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable wishsys
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 2.2,
    snap        == 0.11.*,
    snap-core   == 0.9.*,
    containers  == 0.4.*,
    lens	>= 3.8 && < 4,
    HDBC-sqlite3 == 2.1.*,
    snaplet-hdbc == 0.11,
    heist == 0.11.*,
    xmlhtml == 0.2.*,
    blaze-html == 0.5.*,
    text == 0.11.*,
    ConfigFile == 1.1.*,
    MissingH == 1.2.*,
    split    == 0.2.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
